<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="environment_select_host">环境选择</string>
  <string name="environment_select_mock_delay">mock delay</string>
  <string name="environment_remote_debugger_addr">10.16.74.230:8765</string>>
  <string name="environment_host_title">输入您想要连接的HOST URL地址。\n\n例如：
    https://bob-loblaw.local/1.0</string>
  <string name="endpoint_custom_title">请设置URL地址</string>
  <string name="endpoint_protocol">http://</string>
  <string name="scroll_to_top">置顶</string>
  <string name="scroll_to_bottom">置底</string>
  <string name="log">日志</string>
  <string name="clear">清空</string>
  <string name="share">分享</string>
  <string name="cancel">取消</string>
  <string name="ok">确定</string>
  <string name="submit">提交</string>
  <string name="feedback">反馈问题</string>
</resources>