<?xml version="1.0" encoding="utf-8"?>
<com.fast.libdeveloper.EnvironmentConfigLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/padding">

        <TextView
            style="@style/TextPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding"
            android:layout_marginRight="@dimen/padding"
            android:text="@string/environment_select_host" />

        <Spinner
            android:id="@+id/spinner_endpoint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding"
            android:layout_marginRight="@dimen/padding"
            android:layout_weight="1"
            android:popupBackground="@android:color/white" />

        <ImageView
            android:id="@+id/iv_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/debug_drawer_icon_edit" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/debug_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/padding"
        android:visibility="gone">

        <EditText
            android:id="@+id/remote_debugger_addr"
            style="@style/TextPrimary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/padding"
            android:layout_weight="1"
            android:hint="@string/environment_remote_debugger_addr"
            android:text="@string/environment_remote_debugger_addr" />

        <Switch
            android:id="@+id/remote_debugger_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/debug_divider" />

    <LinearLayout
        android:id="@+id/layout_mock_delay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/padding"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            style="@style/TextPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding"
            android:layout_marginRight="@dimen/padding"
            android:text="@string/environment_select_mock_delay" />

        <Spinner
            android:id="@+id/spinner_mock_delay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:popupBackground="@android:color/white" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/debug_divider" />

    <TextView
        android:id="@+id/tvBtn_dev"
        style="@style/TextPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding"
        android:layout_marginRight="@dimen/padding"
        android:padding="12dp"
        android:text="调试界面" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/debug_divider" />

    <TextView
        android:id="@+id/tv_version"
        style="@style/TextPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding"
        android:layout_marginRight="@dimen/padding"
        android:textColor="@color/debug_text_hint"
        android:padding="12dp"
        android:textSize="14sp"
        android:text="测试版本号:" />

</com.fast.libdeveloper.EnvironmentConfigLayout>